fix: avoid black borders if poster doesn't fit 100% to ratio

--- a/src/css/components/_poster.scss
+++ b/src/css/components/_poster.scss
@@ -30,3 +30,8 @@
 .vjs-using-native-controls .vjs-poster {
   display: none;
 }
+
+// avoid black borders if poster doesn't fit 100% to ratio
+.vjs-fluid .vjs-poster {
+  background-size: cover;
+}
